[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "repub"
author = "Stefan Trklja Countryman"
author-email = "stefan.countryman@gmail.com"
home-page = "https://github.com/stefco/repub"
classifiers = ["License :: OSI Approved :: MIT License"]

